--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
 <head>
 
   <meta charset="UTF-8">
-  <title>Employee Tracker</title>
+  <title>Train Scheduler</title>
 
+  <!-- CSS Reference-->
+  <link rel="stylesheet" href="assets/css/reset.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  
   <!-- Bootstrap -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -18,13 +22,6 @@
   <!-- Moment.js Reference -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
 
-  <style>
-    #train-table th,
-    td {
-      display: inline-block;
-      width: 16.575%;
-    }
-  </style>
 </head>
 
 <body>
@@ -34,8 +31,9 @@
 
     <!-- Jumbotron -->
     <div class="jumbotron" style="background-color: black; color: white">
-      <h1 class="text-center">Anytime is Train Time</h1>
-      <h3 class="text-center">Choo Choo Train</h3>
+      <h1 class="text-center" id="title">Bullet Scheduler</h1>
+      <img src="assets/images/bullet.jpg" class="img-fluid rounded" alt="Responsive image">
+      <h3 class="text-center">Add Train Schedule Below</h3>
     </div>
 
     <div class="row">
@@ -46,7 +44,7 @@
         <div class="card mb-4">
           <div class="card-header">Current Train Schedule</div>
           <div class="card-body">
-            <table class="table table-sm table-hover" id='train-table'>
+            <table class="table table-sm table-hover" id="train-table">
               <thead>
                 <tr>
                   <th scope="col">Train Name</th>
@@ -54,7 +52,6 @@
                   <th scope="col">Frequency (min)</th>
                   <th scope="col">Next Arrival</th>
                   <th scope="col">Minutes Away</th>
-                  <!-- <th scope="col">Total Billed ($)</th> -->
                 </tr>
               </thead>
               <tbody>
@@ -90,7 +87,7 @@
                 <label for="frequency-input">Frequency (min)</label>
                 <input class="form-control" id="frequency-input" placeholder="" type="text">
               </div>
-              <button class="btn btn-primary float-right" id="add-train-btn">Submit</button>
+              <button type="button" class="btn btn-secondary btn-lg btn-block" id="add-train-btn">Submit</button>
             </form>
 
           </div>
