--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <label for="frequency-input">Frequency (min)</label>
                 <input class="form-control" id="frequency-input" placeholder="" type="text">
               </div>
-              <button type="button" class="btn btn-secondary btn-lg btn-block" id="add-train-btn">Submit</button>
+              <button type="button" class="btn btn-secondary btn-lg" id="add-train-btn">Submit</button>
             </form>
 
           </div>
